--- a/anli34/pom.xml
+++ b/anli34/pom.xml
@@ -21,24 +21,63 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>5.0.4</version>
+	</dependency>
+    
+    <!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
+	<dependency>
+	    <groupId>com.mchange</groupId>
+	    <artifactId>c3p0</artifactId>
+	    <version>0.9.5.2</version>
+	</dependency>
+    
+    <!-- https://mvnrepository.com/artifact/commons-pool/commons-pool -->
+	<dependency>
+	    <groupId>commons-pool</groupId>
+	    <artifactId>commons-pool</artifactId>
+	    <version>1.5.6</version>
+	</dependency>
+    
+    <!-- https://mvnrepository.com/artifact/commons-dbutils/commons-dbutils -->
+	<dependency>
+	    <groupId>commons-dbutils</groupId>
+	    <artifactId>commons-dbutils</artifactId>
+	    <version>1.6</version>
+	</dependency>
+    
     <!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
 	<dependency>
     	<groupId>commons-httpclient</groupId>
     	<artifactId>commons-httpclient</artifactId>
     	<version>3.1</version>
 	</dependency>
+	
     <!-- https://mvnrepository.com/artifact/ch.hsr/geohash -->
 	<dependency>
 		<groupId>ch.hsr</groupId>
 		<artifactId>geohash</artifactId>
 		<version>1.3.0</version>
 	</dependency>
+	
     <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
 	<dependency>
 	    <groupId>com.alibaba</groupId>
 	    <artifactId>fastjson</artifactId>
 	    <version>1.2.47</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+	<dependency>
+	    <groupId>org.jsoup</groupId>
+	    <artifactId>jsoup</artifactId>
+	    <version>1.10.3</version>
+	</dependency>
+	
     
   </dependencies>
 </project>
